--- a/src/components/Basics/style.css
+++ b/src/components/Basics/style.css
@@ -26,10 +26,12 @@ html {
 
 .main-card--cointainer {
   display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 500px));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 50px;
   justify-content: space-around;
   padding: 50px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .card-container {
@@ -42,14 +44,13 @@ html {
 }
 
 .card-container img {
-  max-width: 100%;
-  height: 300px;
+  width: 100%;
+  height: 200px;
 }
 
 .card {
   background-color: #fff;
   padding: 30px;
-  position: relative;
   box-shadow: 0 0 5px rgba(75, 75, 75, 0.07);
   z-index: 1;
 }
@@ -58,9 +59,7 @@ html {
   display: inline-block;
 }
 
-.card-number {
-  margin-top: 15px;
-}
+
 
 .card-circle {
   border: 1px solid #aaa;
@@ -83,7 +82,7 @@ html {
 
 .card-title {
   font-family: "Cormorant Garamond", serif;
-  font-size: 60px;
+  font-size: 30px;
   font-weight: 300;
   line-height: 60px;
   margin: 10px 0;
@@ -133,7 +132,6 @@ html {
 
 .card-media {
   max-width: 100%;
-  height: auto;
 }
 
 .card-shadow {
@@ -169,9 +167,11 @@ html {
 
 /** button group styles **/
 .btn-group {
-  border-radius: 1rem;
   text-transform: capitalize;
 }
+
+
+
 .btn-group__item {
   border: none;
   /* min-width: 6rem; */
@@ -184,13 +184,12 @@ html {
   transition: all 300ms ease-out;
   text-transform: capitalize;
 }
-.btn-group__item:last-child {
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-.btn-group__item:first-child {
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+
+@media screen and (max-width:750px) {
+  .btn-group__item{
+    font-size: 12px;
+    padding: 0.5em 1.5em;
+  }
 }
 .btn-group__item:hover,
 .btn-group__item:focus {
